argocd/chipndale/apps/argocd-access/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - chipndale-argocd
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
